--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,8 @@ dependencies:
 
 library:
   source-dirs: src
+  dependencies:
+    - random
 
 executables:
   ImageCompressor-exe:
@@ -35,6 +37,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - ImageCompressor
+    - random
 
 tests:
   ImageCompressor-test:
@@ -46,3 +49,4 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - ImageCompressor
+    - random
