[FIX] filter value, must filter only if all value are filtered
[ADD] unit tests for compressor

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ example.txt
 # Bin
 
 imageCompressor
+
+# Tmp Files
+
+*[Tt][Mm][Pp]*
+*[Tt][Oo][ _\-][Dd][Ee][Ll]*
+*[Tt][Oo][Dd][Ee][Ll]*
+*zip*
+
