--- a/ImageCompressor.cabal
+++ b/ImageCompressor.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3b2e0c0da51c6af42b4d80d541db198ce41b1ecf43badd199b9723b36dc8a553
+-- hash: 15fa8d0f05eb8d7c83bff01721b276bd722c8c6fe2ee2050a2c67752d2f7bf2c
 
 name:           ImageCompressor
 version:        0.1.0.0
@@ -61,7 +61,7 @@ test-suite ImageCompressor-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      LibSpec
+      CompressorSpec
       Paths_ImageCompressor
   hs-source-dirs:
       test
@@ -69,5 +69,6 @@ test-suite ImageCompressor-test
   build-depends:
       ImageCompressor
     , base >=4.7 && <5
+    , hspec
     , random
   default-language: Haskell2010
