[ARCHITECTURE] Refined file architectures and changed some type definitions to data structures

--- a/ImageCompressor.cabal
+++ b/ImageCompressor.cabal
@@ -1,10 +1,8 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 61edea96cd09283c1394ecf7e4634a85d789026c0b454255211d17318b57ff38
 
 name:           ImageCompressor
 version:        0.1.0.0
@@ -27,13 +25,19 @@ source-repository head
 
 library
   exposed-modules:
-      Cluster
+      ArgumentParsing.Lexing
+      ArgumentParsing.Parsing
+      Cluster.Cluster
       Compressor
       CompressorConf
-      CreatePixel
       Errors
-      Parsing
+      FileParsing.CreatePixel
+      FileParsing.Pixel
+      FileParsing.PixelLexing
+      FileParsing.PixelParsing
+      RandomManager
       Usage
+      Vector.Vector
   other-modules:
       Paths_ImageCompressor
   hs-source-dirs:
@@ -49,7 +53,7 @@ executable ImageCompressor-exe
       Paths_ImageCompressor
   hs-source-dirs:
       app
-  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       ImageCompressor
     , base >=4.7 && <5
