--- a/package.yaml
+++ b/package.yaml
@@ -32,7 +32,7 @@ executables:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
-    - -Wall
+    # - -Wall
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
