[FIX] CompressorSpec after rework
[CLEAN CODE]

--- a/ImageCompressor.cabal
+++ b/ImageCompressor.cabal
@@ -1,8 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.33.0.
 --
 -- see: https://github.com/sol/hpack
+--
+-- hash: 6e7e99bd91cb6a2fbea7f040b325e44d00bcd156afba33d256e1ddebf1005a5e
 
 name:           ImageCompressor
 version:        0.1.0.0
