--- a/package.yaml
+++ b/package.yaml
@@ -1,14 +1,13 @@
 name:                ImageCompressor
 version:             0.1.0.0
-github:              "githubuser/ImageCompressor"
+github:              "guillaumebgd/ImageCompressor"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2021 Author name here"
+author:              "Guillaume Bogard-Coquard"
+maintainer:          "guillaume.bogardcoquard@gmail.com"
+copyright:           "2022 Guillaume Bogard-Coquard"
 
 extra-source-files:
 - README.md
-- ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -17,7 +16,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/ImageCompressor#readme>
+description:         Please see the README on GitHub at <https://github.com/guillaumebgd/ImageCompressor/blob/master/README.md>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -32,7 +31,6 @@ executables:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
-    # - -Wall
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
